--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/buscarAvanzadoProductos.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/buscarAvanzadoProductos.tex
@@ -15,9 +15,9 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{ El vendedor accede a la pantalla para realizar la búsqueda de productos.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor ingrese una cadena de búsqueda, elija el grupo y categoría y también seleccione si desea buscar productos dados de baja.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor ingrese una cadena de búsqueda, elija el grupo, categoría y tipo de producto y si desea buscar productos dados de baja.}
     \addCaseUseStep{El vendedor completa los campos solicitados.}
-    \addCaseUseStep{ZMGestion realiza la busqueda por nombre del producto, categoría y grupo de productos y estado.}
+    \addCaseUseStep{ZMGestion realiza la busqueda por nombre del producto, categoría, tipo, grupo de productos y estado.}
     \addCaseUseStep{ZMGestion lista las coincidencias encontradas.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
