--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/listarLineasVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/listarLineasVenta.tex
@@ -5,7 +5,7 @@
 \renewcommand{\caseUseModified}{13/02/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUlistarLineasVenta - Listar lineas de venta} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor listar las lineas de venta de una venta determinada.} %Resumen
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor de ZMGestion listar las lineas de venta de una venta determinada.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere listar las lineas de venta de una venta existente.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoVentas\ (Buscar avanzado ventas).} %Precondiciones
