--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -142,8 +142,8 @@
 			\itemCaseUse{listarLineasVenta}{Listar líneas de venta}
 			\itemCaseUse{modificarVenta}{Modificar venta}
 			\itemCaseUse{borrarVenta}{Borrar venta}
-			%\itemCaseUse{generarOrdenProduccionDesdeVenta}{Generar orden de producción a partir de venta}
-			%\itemCaseUse{revisarVenta}{Revisar venta}
+			\itemCaseUse{generarOrdenProduccionDesdeVenta}{Generar orden de producción a partir de venta}
+			\itemCaseUse{revisarVenta}{Revisar venta}
 		\end{itemize}
 		\item Gestión líneas de venta
 		\begin{itemize}
@@ -163,41 +163,39 @@
 		\end{itemize}
 		\item Gestión órdenes de producción
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearOrdenProduccion}{Crear orden de producción}
-			%\itemCaseUse{buscarAvanzadoOrdenesProduccion}{Buscar avanzado órdenes de producción}
-			%\itemCaseUse{modificarOrdenProduccion}{Modificar orden de producción}
-			%\itemCaseUse{listarLineasOrdenProduccion}Listar lineas de orden de producción}
-			%\itemCaseUse{borrarOrdenProduccion}{Borrar orden de producción}
-			%\itemCaseUse{cancelarOrdenProduccion}{Cancelar orden de producción}
-			%\itemCaseUse{listarObservacionesLineaOrdenProduccion}{Listar observaciones de línea de orden de producción}
-			%\itemCaseUse{listarTareasOrdenProduccion}{Listar tareas de línea de orden de producción}
+			\itemCaseUse{crearOrdenProduccion}{Crear orden de producción}
+			\itemCaseUse{buscarAvanzadoOrdenesProduccion}{Buscar avanzado órdenes de producción}
+			\itemCaseUse{modificarOrdenProduccion}{Modificar orden de producción}
+			\itemCaseUse{listarLineasOrdenProduccion}{Listar lineas de orden de producción}
+			\itemCaseUse{borrarOrdenProduccion}{Borrar orden de producción}
+			\itemCaseUse{cancelarOrdenProduccion}{Cancelar orden de producción}
+			\itemCaseUse{listarObservacionesLineaOrdenProduccion}{Listar observaciones de línea de orden de producción}
+			\itemCaseUse{listarTareasLineaOrdenProduccion}{Listar tareas de línea de orden de producción}
 		\end{itemize}
 		\item Gestión líneas de órdenes de producción
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearLineaOrdenProduccion}{Crear línea de orden de producción}
-			%\itemCaseUse{modificarLineaOrdenProduccion}{Modificar línea de orden de producción}
-			%\itemCaseUse{borrarLineaOrdenProduccion}{Borrar línea de orden de producción}
-			%\itemCaseUse{verificarLineaOrdenProduccion}{Verificar línea de orden de producción}
-			%\itemCaseUse{cancelarLineaOrdenProduccion}{Cancelar línea de orden de producción}		
+			\itemCaseUse{crearLineaOrdenProduccion}{Crear línea de orden de producción}
+			\itemCaseUse{modificarLineaOrdenProduccion}{Modificar línea de orden de producción}
+			\itemCaseUse{borrarLineaOrdenProduccion}{Borrar línea de orden de producción}
+			\itemCaseUse{verificarLineaOrdenProduccion}{Verificar línea de orden de producción}
+			\itemCaseUse{cancelarLineaOrdenProduccion}{Cancelar línea de orden de producción}	
+			\itemCaseUse{reanudarLineaOrdenProduccion}{Reanudar línea de orden de producción}		
 		\end{itemize}
 		\item Gestión observaciones
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearObservacion}{Crear observación}
-			%\itemCaseUse{borrarObservacion}{Borrar observación}
+			\itemCaseUse{crearObservacion}{Crear observación}
+			\itemCaseUse{borrarObservacion}{Borrar observación}
 		\end{itemize}
 		\item Gestión tareas
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearTarea}{Crear tarea}
-			%\itemCaseUse{borrarTarea}{Borrar tarea}
-			%\itemCaseUse{finalizarTarea}{Finalizar tarea}
-			%\itemCaseUse{verificarTarea}{Verificar tarea}
-			%\itemCaseUse{pausarTarea}{Pausar tarea}
-			%\itemCaseUse{reanudarTarea}{Reanudar tarea}
-			%\itemCaseUse{cancelarTarea}{Cancelar tarea}
+			\itemCaseUse{crearTarea}{Crear tarea}
+			\itemCaseUse{borrarTarea}{Borrar tarea}
+			\itemCaseUse{finalizarTarea}{Finalizar tarea}
+			\itemCaseUse{verificarTarea}{Verificar tarea}
+			\itemCaseUse{pausarTarea}{Pausar tarea}
+			\itemCaseUse{reanudarTarea}{Reanudar tarea}
+			\itemCaseUse{cancelarTarea}{Cancelar tarea}
+			\itemCaseUse{ejecutarTarea}{Ejecutar tarea}
 		\end{itemize}
 	\end{itemize}	
 	\subsection{Diagrama de casos de uso}
@@ -432,8 +430,8 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/listarLineasVenta.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/modificarVenta.tex}
 			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/generarOrdenProduccionDesdeVenta.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/revisarVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/generarOrdenProduccionDesdeVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionVentas/revisarVenta.tex}
 
 			%GestionLineasVenta
 			\input{Capitulos/Capitulo4/CasosUso/GestionLineasVenta/crearLineaVenta.tex}
@@ -449,35 +447,36 @@
 			%\input{Capitulos/Capitulo4/CasosUso/GestionComprobantes/borrarComprobante.tex}
 			
 			%GestionOrdenesProduccion
-			%\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/crearOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/modificarOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarLineasOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/borrarOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/cancelarOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarObservacionesLineaOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/crearOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/buscarAvanzadoOrdenesProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/modificarOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarLineasOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/borrarOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/cancelarOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarObservacionesLineaOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex}
 
 			%GestionLineasOrdenesProduccion
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/modificarLineaOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/borrarLineaOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/verificarLineaOrdenProduccion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/cancelarLineaOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/modificarLineaOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/borrarLineaOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/verificarLineaOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/cancelarLineaOrdenProduccion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/reanudarLineaOrdenProduccion.tex}
 
 			%GestionObservaciones
-			%\input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/crearObservacion.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/borrarObservacion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/crearObservacion.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionObservaciones/borrarObservacion.tex}
 			
 			%GestionTareas
-			%\input{Capitulos/Capitulo4/CasosUso/GestionTareas/crearTarea.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionTareas/borrarTarea.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionTareas/finalizarTarea.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionTareas/verificarTarea.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionTareas/pausarTarea.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionTareas/reanudarTarea.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionTareas/cancelarTarea.tex}
-
+			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/crearTarea.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/borrarTarea.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/finalizarTarea.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/verificarTarea.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/pausarTarea.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/reanudarTarea.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/cancelarTarea.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionTareas/ejecutarTarea.tex}
 		\end{enumerate}
 	
 	\subsection{Diagramas de estado}
