--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/crearLineaOrdenProduccion.tex
@@ -29,6 +29,11 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe ingresar una cantidad mayor a cero.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
+    \newAlternative{A3: El tipo de producto seleccionado no es del tipo `Producible'.}{3} %Flujo alternativo A1.
+    \caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que el producto seleccionado no puede ser asignado a una orden de producción.}
+    \caseUseRow{El escenario vuelve al punto 2.}
+    \caseUseRow{}
 }
 
 \item Caso de uso \caseUseName
