--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/crearLineaPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/crearLineaPresupuesto.tex
@@ -19,7 +19,7 @@
     \addCaseUseStep{El vendedor selecciona producto, tela, lustre y la cantidad solicitada.}
     \addCaseUseStep{ZMGestion autocompleta el campo precio unitario con el precio actual del producto seleccionado con la tela solicitada. Si el vendedor cuenta con los permisos necesario para modificar este campo se le permite la edición, caso contrario se le muestra el campo deshabilitado con el precio.}
     \addCaseUseStep{El vendedor cuenta con los permisos necesarios y modifica el precio.}
-    \addCaseUseStep{ZMGestion crea la linea de presupuesto en estado "Pendiente" y la asocia al presupuesto seleccionado.}
+    \addCaseUseStep{ZMGestion crea la linea de presupuesto en estado `Pendiente' y la asocia al presupuesto seleccionado.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
 	\newAlternative{A1: La cantidad solicitada es menor o igual a cero.}{3} %Flujo alternativo A1.
