--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionOrdenesProduccion/listarTareasLineaOrdenProduccion.tex
@@ -1,35 +1,28 @@
 
-\renewcommand{\caseUseShortName}{listarLineasOrdenProduccion} %cammelCase name
+\renewcommand{\caseUseShortName}{listarTareasLineaOrdenProduccion} %cammelCase name
 
 \renewcommand{\caseUseCreated}{03/03/2020} %Fecha creación
 \renewcommand{\caseUseModified}{03/03/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUlistarLineasOrdenProduccion - Listar lineas de orden de producción } %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{\CUlistarTareasLineaOrdenProduccion - Listar tareas de líneas de orden de producción } %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a los usuarios de ZMGestion listar las lineas de orden de producción de una orden de producción especifica.} %Resumen
-\renewcommand{\caseUsePeople}{Usuarios: quiere listar las lineas de orden de producción.} %Actor: Meta
-\renewcommand{\caseUsePreconditions}{\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoOrdenesProduccion\ (Buscar avanzado órdenes de producción).} %Precondiciones
+\renewcommand{\caseUseSummary}{Este caso de uso permite a los fabricantes de ZMGestion listar las tareas de una línea de orden de producción existente.} %Resumen
+\renewcommand{\caseUsePeople}{Fabricantes: quiere listar las lineas de orden de producción.} %Actor: Meta
+\renewcommand{\caseUsePreconditions}{\caseUseRow{Haber realizado con éxito el \CUlistarLineasOrdenProduccion\ (Listar líneas de orden de producción).} %Precondiciones
 }
 \renewcommand{\caseUsePostconditions}{
 	\caseUseRow{Ninguna.} %Postcondiciones
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
-    \addCaseUseStep{El usuario indica la orden de producción de la cual desea listar sus lineas de orden de producción.}
-    \addCaseUseStep{ZMGestion lista las lineas de orden de producción de la orden de producción seleccionada.}
+    \addCaseUseStep{El fabricante selecciona una línea de orden de producción a la cual le desea listar sus tareas.}
+    \addCaseUseStep{ZMGestion lista las tareas de la línea de orden de producción seleccionada.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: La orden de producción no posee lineas de orden de producción.}{1} %Flujo alternativo A1.
+	\newAlternative{A1: La línea de orden de producción no posee tareas.}{1} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muetsra un mensaje indicando que la orden de producción indicada no posee lineas de orden de producción.}
+    \alternativeRow{ZMGestion muestra un mensaje indicando que la línea de orden de producción no posee tareas.}
     \caseUseRow{El escenario vuelve al punto 1.}
     \caseUseRow{}
-
 }
-\renewcommand{\caseUseRequirementsGUI}{
-	\caseUseRow{Teclado, Mouse y Pantalla} %Requisitos interfaz de usuario
-}
-\renewcommand{\caseUseResponseTime}{La interfaz debe responder dentro de un tiempo máximo de 10 segundos.} %Requisitos funcionales: Tiempo de respuesta
-\renewcommand{\caseUseConcurrence}{} %Requisitos funcionales: Concurrencia
-\renewcommand{\caseUseAvailability}{} %Requisitos funcionales: Disponibilidad
 
 \item Caso de uso \caseUseName
 \input{Capitulos/Capitulo4/CasosUso/generalTable.tex}
