--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/modificarProducto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionProductos/modificarProducto.tex
@@ -15,7 +15,7 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador selecciona el producto que desea modificar.}
-    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos del producto seleccionado para que el administrador modifique: nombre, categoría, grupo, cantidad de metros de tela necesario para producirlo y precio.}
+    \addCaseUseStep{ZMGestion muestra un formulario autocompletado con los datos del producto seleccionado para que el administrador modifique: nombre, categoría, grupo, tipo de producto, cantidad de metros de tela necesario para producirlo y precio. Indicando que todos los campos menos la cantidad de metros de tela son requeridos.}
     \addCaseUseStep{El administrador modifica los campos que desea cambiar.}
     \addCaseUseStep{ZMGestion modifica el producto asignando al producto los valores que hayan sido modificados y muestra un mensaje indicando el éxito de la operación.}
 }
@@ -38,11 +38,6 @@
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 
-    \newAlternative{A3: La cantidad de tela ingresada es menor a cero.}{3} %Flujo alternativo A2.
-    \caseUseRow{La secuencia A3 comienza luego del punto 3 del escenario principal.}%¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que la cantidad de tela no puede ser menor que cero.}
-    \caseUseRow{El escenario vuelve al punto 2.}
-    \caseUseRow{}
     \newAlternative{A4: El administrador ha dejado un campo requerido vacio.}{3} %Flujo alternativo A3.
 	\caseUseRow{La secuencia A4 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que dicho campo es requerido.}
