--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/borrarVenta.tex
@@ -5,7 +5,7 @@
 \renewcommand{\caseUseModified}{13/02/2020} %Fecha modificación
 \renewcommand{\caseUseName}{\CUborrarVenta - Borrar venta} %{\CUcammelCase - Title}
 
-\renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador borrar una venta existente.} %Resumen
+\renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador de ZMGestion borrar una venta existente.} %Resumen
 \renewcommand{\caseUsePeople}{Administradores: quiere borrar una venta.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoVentas\ (Buscar avanzado ventas).} %Precondiciones
@@ -18,7 +18,7 @@
     \addCaseUseStep{ZMGestion borra la venta y muestra un mensaje indicando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-    \newAlternative{A1: La venta indicada no se encuentra en estado "En creación".}{1} %Flujo alternativo A1.
+    \newAlternative{A1: La venta indicada no se encuentra en estado `En creación'.}{1} %Flujo alternativo A1.
     \caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error informando que la venta no puede borrarse.}
     \caseUseRow{El escenario vuelve al punto 1.}
